# new-celery-config

./: .makefile-help  .pylintrc  Makefile  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml
new_celery_config/: __init__.py  as_module.py
tests/: test_as_module.py  test_new_celery_config.py
